--- a/css/nav.css
+++ b/css/nav.css
@@ -9,9 +9,9 @@ nav {
     margin: 0;
     padding: 0;
     width: 100%;
-    padding: 20px 0;
+    padding: 15px 0;
     z-index: 1001;
-    background: #fff;
+    background: #020F59;
     -moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.15);
 }
@@ -31,18 +31,18 @@ nav ul li {
 nav ul li a,
 nav ul li a:visited {
     text-decoration: none !important;
-    color: #000 !important;
+    color: #fff !important;
     font-size: 16px;
     transition: 0.3s;
     padding: 30px 10px;
 }
 
-nav ul li a:hover {
-    text-decoration: none !important;
-    color: #5cb25d !important;
-    font-size: 16px;
-    transition: 0.2s;
-}
+    nav ul li a:hover {
+        text-decoration: none !important;
+        color: #94B3F2 !important;
+        font-size: 16px;
+        transition: 0.2s;
+    }
 
 
 .nav-bottom {
