--- a/css/project.css
+++ b/css/project.css
@@ -18,16 +18,16 @@
     padding-bottom: 10px;
 }
 
-.projects-heading h2:before {
-    position: absolute;
-    bottom: 0;
-    content: "";
-    width: 50px;
-    margin-left: -25px;
-    height: 2px;
-    left: 50%;
-    background: #77D970;
-}
+    .projects-heading h2:before {
+        position: absolute;
+        bottom: 0;
+        content: "";
+        width: 50px;
+        margin-left: -25px;
+        height: 2px;
+        left: 50%;
+        background: #5E7EBF;
+    }
 
 
 
@@ -40,7 +40,7 @@
     bottom: 0;
     margin-bottom: 30px;
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.08);
-    border-radius: 10px;
+    border-radius: 3px;
     transition: 0.1s;
 
 }
@@ -101,12 +101,12 @@
 
 
 
-.card-item .card-item-text h2 {
-    font-size: 20px;
-    font-weight: 400;
-    margin: 0 0 10px 0;
-    color: #77D970;
-}
+    .card-item .card-item-text h2 {
+        font-size: 20px;
+        font-weight: 400;
+        margin: 0 0 10px 0;
+        color: #5E7EBF;
+    }
 
 
 .card-item .card-item-text .gtco-stack {
@@ -154,5 +154,5 @@
 }
 
 #projects {
-    padding: 7em 0;
+    padding: 5em 0;
 }
